@startuml ER
'set orthogonal line style
skinparam linetype ortho

entity "User" as e01 {
    *user_id : number <<generated>>
    --
    *name : text
    *email : text
    *telephoneNumber : text
    *role : text
    *password : text
}

entity "Reservation" as e02 {
    *reservation_id : number <<generated>>
    --
    *user_id : number <<FK>>
    *workspace_id : number <<FK>>
    *date : date
    *startTime : text
    *endTime : text
    *status : text
}

entity "WorkSpace" as e03 {
    *workspace_id : number <<generated>>
    --
    *name : text
    *address : text
    *telephoneNumber : text
    capacity : number
}

e01 |o..|{ e02
e02 }o--|| e03

@enduml
